Fix the layout for the new "groundhogs" page
- Make the bullets more left padded otherwise they are cut off
- Change text of 'active groundhogs' link

--- a/src/scss/elements/_lists.scss
+++ b/src/scss/elements/_lists.scss
@@ -4,14 +4,14 @@
 ul {
   &.with-bullets {
     list-style-type: disc;
-    padding-left: vars.$space-lg;
+    padding-left: calc(vars.$space-xs + vars.$space-md)
   }
 }
 
 ol {
   &.with-decimals {
     list-style-type: decimal;
-    padding-left: vars.$space-lg;
+    padding-left: calc(vars.$space-xs + vars.$space-md)
   }
 }
 
